inter/Tests/Valid/labelling.intert
packagetype _plain
packagetype _code

primitive !if val code -> void
primitive !jump lab -> void

package main _plain
	typename K_number = int32
	typename K_func = function K_number -> K_number
	package (K_func) R_101 _code
		local (/main/K_number) x __argument
		code
			.begin
			inv !if
				val 1
				code
					inv !jump
						lab .begin
